# solana-shmem-geyser

./: .gitignore  Cargo.toml  README.md  plugin_init.rs
scripts/: gen_config.sh
src/: lib.rs  shmem_proto.rs
